# cloud-ai-sdk

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package.yml  quic-organization-repolinter.yml
API_Reference_Card/: README.md
Getting Started/: Getting Started.md  Getting Started1.md
Getting Started/Inference Workflow/: Inference Workflow.md
Getting Started/Inference Workflow/model execution/: 0. Execute using qaic-runner.md  4. Triton Inference Server.md
Getting Started/Inference Workflow/model optimization/: 2. Model accuracy.md  4. Model quantization.md  5. Pre and Post Processing.md
Getting Started/Installation/: installation.md
Getting Started/Installation/Cloud AI SDK/: Cloud AI SDK.md
Getting Started/Installation/Docker/: Docker.md
Getting Started/Installation/Hypervisors/: ESXi.md  Hyper-V.md  KVM.md
Getting Started/Installation/Pre-requisites/: pre-requisites.md
Model Recipies/Image_Classification/EfficientNetB0/: efficientnet_run.sh  efficientnet_setup.sh  file-list.txt  generateModels_torch.py  readme.md  requirements.txt
Model Recipies/Image_Classification/ResNet101/: Model.py  Readme.md  list.txt  requirements.txt  resnet101_run.sh  resnet101_setup.sh  resnetv1_model_info.yaml
Model Recipies/Image_Classification/ResNet152/: Model.py  requirements.txt  resnet152_config.yaml  resnet152_run.sh  resnet152_setup.sh
Model Recipies/Image_Classification/ResNet50/: Readme.md  list.txt  resnet50_model_info.yaml  resnet50_run.sh  resnet50_setup.sh
Model Recipies/NLP/ALBERT_QA/: Readme.md  albertQA_run.sh  albertQA_setup.sh  generate_inputs_onnx_model.py  requirements.txt
Model Recipies/NLP/CLIP/: README.md  clip_run.sh  clip_setup.sh  generate_inputs.py  generate_inputs_onnx_model.py  generate_model.py  list.txt  requirements.txt  transformer_changes.patch
Model Recipies/NLP/DeBERTaV3/: README.md  debertav3_run.sh  generateModel.py  requirements.txt
Model Recipies/NLP/DistillGPT2/: README.md  generateInputs.py  generateModel.py  input_list_bs64_sl8.txt  requirements.txt  run_distilgpt2.sh  slice_before_logits.patch  splitAndSimplifyONNXGraph.py
Model Recipies/NLP/DistillRoBERTa_base/: distillroberta_run.sh  distillroberta_setup.sh  distilroberta_base_hf_model_info.yaml  generate_inputs_onnx_model.py  input_128.txt  readme.md  requirements.txt
Model Recipies/NLP/GPT2_small/: README.md  generateModel.py  gpt2-run.sh  list.txt  list_bs1.txt  requirements.txt
Model Recipies/NLP/MiniLM/: generateModelwithQAHead.py  generate_inputs_onnx_model.py  minilm_run.sh  minilm_setup.sh  readme.md
Model Recipies/NLP/RoBERTa_Large/: Model.py  README_Roberta.md  generateSampleInput.py  requirements.txt  (+1 more)
docs/: 0. Getting Started.md  0. Introduction.md  1. Installation  1. Installation.md  2. Health and Resource monitoring.md  2. Health and resource monitoring.md  README.md  docker.md
docs/Large models/: 0. Introduction.md
docs/installation/: installation.md
docs/model compilation/: Model Compilation.md
docs/model execution/: 0. Execute using qaic-runner.md  1. Execute using Python runtime APIs.md  2. Execute using C++ runtime APIs.md  3. ONNXRT Execution Provider.md  5. Inference Profiling.md
docs/model export/: 0. Export the Model.md  1. Prepare the model.md
docs/model optimization/: 0. Export the Model.md  1. Compile the model.md  1. Prepare the model.md  2. Model accuracy.md  3. Performance tuning.md  5. Pre and Post Processing.md  6. Advanced Features.md  Performance tuning.md
images/: README.md
models/common/: postprocess.py  preprocess.py
models/vision/: README.md
qaic_models/common/: postprocess.py  preprocess.py
qaic_models/vision/: __init__.py
samples/: README.md
samples/cpp/: README.md
samples/cpp/cpp_qpc_inference/: CMakeLists.txt  Readme.md  main.cpp
samples/python/: README.md  common_utils.py  requirements.txt
tools/: Readme.md
triton/: README.md
tutorials/: README.md
tutorials/Kubernetes/: Kubernetes with Cloud AI 100.ipynb
tutorials/NLP/Model-Onboarding-Beginner/cpp_qpc_inference/: CMakeLists.txt  Readme.txt  main.cpp
tutorials/Playground/: Imagine Basic usage.ipynb  Imagine with openai client.ipynb  README.md  cloud-ai-playground.ipynb
tutorials/efficient_transformers/: Efficient transformers library for Cloud AI 100.ipynb  README.md
tutorials/open-webui/: README.md  open_webui.sh  serve.sh  vllm_container.sh
utils/: README.md
utils/multi-device/: QAicChangeAcs.py  README.md  enable_mdp.json
utils/qaic-bench/: README.md  qaic_bench.py  random_prompt.txt
(+459 files in other folders)
